[gd_scene load_steps=4 format=3 uid="uid://b07s2oi6os8qq"]

[ext_resource type="Script" path="res://end.gd" id="1_t7o6f"]

[sub_resource type="CircleShape2D" id="CircleShape2D_77lkk"]
radius = 100.0

[sub_resource type="GDScript" id="GDScript_x1unf"]
script/source = "extends Label

func _process(_delta: float) -> void:
	text = str(Engine.get_frames_per_second())
"

[node name="End" type="Area2D"]
script = ExtResource("1_t7o6f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_77lkk")

[node name="End" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -163.0
offset_top = -27.5
offset_right = 163.0
offset_bottom = 27.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "End."
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimerCanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="TimerCanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="FPSLabel" type="Label" parent="TimerCanvasLayer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "60"
script = SubResource("GDScript_x1unf")

[node name="Timer" type="Label" parent="TimerCanvasLayer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 40
text = "00:00
"

[node name="EndCanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="EndCanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.705882)

[node name="CenterContainer" type="CenterContainer" parent="EndCanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="EndCanvasLayer/CenterContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_constants/separation = 16

[node name="EndLabel" type="Label" parent="EndCanvasLayer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Best time"
horizontal_alignment = 1

[node name="LeaderboardTitle" type="Label" parent="EndCanvasLayer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Leaderboards"

[node name="LeaderboardLabel" type="Label" parent="EndCanvasLayer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Leaderboard"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="EndCanvasLayer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="EndCanvasLayer/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Your Name"

[node name="PlayerName" type="LineEdit" parent="EndCanvasLayer/CenterContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24

[node name="SubmitScore" type="Button" parent="EndCanvasLayer/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Submit"

[node name="RestartButton" type="Button" parent="EndCanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -90.5
offset_top = -203.0
offset_right = 90.5
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 40
text = "Restart"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="pressed" from="EndCanvasLayer/CenterContainer/VBoxContainer/HBoxContainer/SubmitScore" to="." method="_on_submit_score_pressed"]
[connection signal="pressed" from="EndCanvasLayer/RestartButton" to="." method="_on_restart_button_pressed"]
